# planner-real-world-experiment

./: .gitignore
shfiles/: fastlio.sh  px4.sh  record-real.sh  record.sh
src/planner/bspline_opt/: CMakeLists.txt  package.xml
src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h  uniform_bspline.h
src/planner/bspline_opt/src/: bspline_optimizer.cpp  uniform_bspline.cpp
src/planner/drone_detect/: CMakeLists.txt
src/planner/obj_predictor/: CMakeLists.txt  package.xml
src/planner/obj_predictor/include/obj_predictor/: obj_predictor.h
src/planner/obj_predictor/src/: obj_generator.cpp  obj_predictor.cpp
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/path_searching/include/path_searching/: dyn_a_star.h  topo_prm.h
src/planner/path_searching/src/: dyn_a_star.cpp  topo_prm.cpp
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/config/: default.rviz
src/planner/plan_env/include/plan_env/: dsp_map.h  env_manager.h  high_precision_timer.hpp  map_visualizer.h  pos_checker.h  poschecker.h  tools.h
src/planner/plan_env/include/plan_env/dbscan/: dbscan_kdtree.h  dbscan_simple.h
src/planner/plan_env/include/plan_env/dynamic/: kalman_filter.h  tracker.hpp  tracker_pool.h
src/planner/plan_env/include/plan_env/ikd-Tree/: ikd_Tree.h
src/planner/plan_env/include/plan_env/static/: grid_map.h
src/planner/plan_env/launch/: dsp_map_test.launch
src/planner/plan_env/src/: dsp_map.cpp  dsp_map_node.cpp  env_manager.cpp  env_node.cpp  grid_map.cpp  kalman_filter.cpp  map_visualizer.cpp  pos_checker.cpp  raycast.cpp  test_node.cpp  test_pyramid_index.cpp  test_stCapsule.cpp  tracker_pool.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/config/: default.rviz  particle_map.yaml  st-capsule.rviz
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  plan_container.hpp  planner_manager.h  topo_replan_fsm.h
src/planner/plan_manage/launch/: map.xml  planner.xml  run_in_experiment.launch  run_in_xtdrone.launch  rviz.launch  simple_run.launch  simulator.launch  test_topo.launch  test_traj.launch
src/planner/plan_manage/launch/back/: advanced_param.xml  dynamic_map_test.launch  run_in_experiment.launch  run_in_sim.launch  single_drone.launch
src/planner/plan_manage/launch/include/: map.xml  planner.xml  real_world_planner.xml  simulator.xml  xtdrone_planner.xml
src/planner/plan_manage/rviz/: default.rviz  topo.rviz  traj.rviz
src/planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp  planner_node.cpp  topo_replan_fsm.cpp  topo_test_node.cpp  topo_traj_node.cpp  traj_server.cpp
src/planner/traj_utils/: CMakeLists.txt
src/planner/traj_utils/include/traj_utils/: planning_visualization.h
src/planner/traj_utils/src/: planning_visualization.cpp
src/realflight_modules/direct_lidar_inertial_odometry/cfg/: dlio.yaml
src/realflight_modules/direct_lidar_inertial_odometry/launch/: dlio.launch
src/realflight_modules/livox_ros_driver2/config/: MID360_config.json
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/realflight_modules/px4ctrl/launch/: run_ctrl.launch
src/uav_simulator/depth_sensor_simulator/: CMakeLists.txt
src/uav_simulator/dynamic_map_generator/include/dynamic_map_generator/: obstacles.hpp  random_dynamic_map.hpp
src/uav_simulator/dynamic_map_generator/launch/: random_dyn_env.launch
src/uav_simulator/dynamic_map_generator/src/: random_dynamic_map.cpp
src/uav_simulator/fake_drone/: CMakeLists.txt
